--- a/quiz_app.html
+++ b/quiz_app.html
@@ -20,7 +20,7 @@
         </div>
         <div class="logo">
             <h1 class="website-title">QUIZ TIME</h1>
-            <img src="Pictures/1725358761252.jpg" alt="Your Logo">
+            <img src="ak.jpg" alt="Your Logo">
         </div>
         <div class="menu" id="myMenu">
             <h5>  QUIZZES   </h5>
@@ -44,21 +44,21 @@
             </div>
         </div>
         <div class="game-card">
-            <img class="game-image" src="Pictures/space.jpeg" alt="">
+            <img class="game-image" src="space.jpeg" alt="">
             <div class="game-details">
                 <div class="game-title">SPACE</div>
                 <p>Want to know about space? </p>
             </div>
         </div>
         <div class="game-card">
-            <img class="game-image" src="Pictures/gene.jpg" alt="Blossom">
+            <img class="game-image" src="gene.jpg" alt="Blossom">
             <div class="game-details">
                 <div class="game-title">ORGANS</div>
                 <p>Test your knowledge about human</p>
             </div>
         </div>
         <div class="game-card">
-            <img class="game-image" src="Pictures/world..jpeg" alt="Octordle">
+            <img class="game-image" src="world..jpeg" alt="Octordle">
             <div class="game-details">
                 <div class="game-title"> WORLD </div>
                 <p>Test your global positioning skills</p>
@@ -76,21 +76,21 @@
             </div>
         </div>
         <div class="game-card">
-            <img class="game-image" src="Pictures/space.jpeg" alt="">
+            <img class="game-image" src="space.jpeg" alt="">
             <div class="game-details">
                 <div class="game-title">SPACE</div>
                 <p>Want to know about space? </p>
             </div>
         </div>
         <div class="game-card">
-            <img class="game-image" src="Pictures/gene.jpg" alt="Blossom">
+            <img class="game-image" src="gene.jpg" alt="Blossom">
             <div class="game-details">
                 <div class="game-title">ORGANS</div>
                 <p>Test your knowledge about human</p>
             </div>
         </div>
         <div class="game-card">
-            <img class="game-image" src="Pictures/world..jpeg" alt="Octordle">
+            <img class="game-image" src="world..jpeg" alt="Octordle">
             <div class="game-details">
                 <div class="game-title"> WORLD </div>
                 <p>Test your global positioning skills</p>
