--- a/quiz_app.html
+++ b/quiz_app.html
@@ -37,7 +37,7 @@
 
     <div class="featured-games">
         <div class="game-card">
-            <img class="game-image" src="Downloads/ai.webp" alt="Quordle">
+           <a href="k.html" ><img class="game-image" src="ai.jpeg" alt="Quordle"></a>
             <div class="game-details">
                 <div class="game-title">ARTIFICAL INTELLIGENCE</div>
                 <p> How far you know about AI?</p>
@@ -64,12 +64,11 @@
                 <p>Test your global positioning skills</p>
         </div>
     </div>
-    <h2 class="akhila
-    /"> GAMES</h2>
+    
 
     <div class="featured-games">
         <div class="game-card">
-            <img class="game-image" src="Downloads/ai.webp" alt="Quordle">
+            <img class="game-image" src="ai.jpeg" alt="Quordle">
             <div class="game-details">
                 <div class="game-title">ARTIFICAL INTELLIGENCE</div>
                 <p> How far you know about AI?</p>
